Fixed element alignment on top banner

--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -8,9 +8,27 @@
     color: white;
     font-size: 20px;
     font-style: oblique;
-    /*
+
+    display: inline-block;
+}
+
+.Dropdown-button {
+    /*align-content: center;*/
+    text-align: center;
+    position: absolute;
+    left:5px;
+    vertical-align: middle;
     display: flex;
-    */
+    width: 50px;
+    height: 50px;
+    background-color: aliceblue;
+    color: black;
+
+    display: inline-block;
+}
+
+.Top-banner {
+    width: 100%;
 }
 
 .Mainpage-body {
@@ -29,16 +47,7 @@
     float:left;
 }
 
-.Dropdown-menu {
-    /*align-content: center;*/
-    text-align: center;
-    vertical-align: middle;
-    display: flex;
-    width: 40px;
-    height: 40px;
-    background-color: aliceblue;
-    color: black;
-}
+
 
 .Credit {
     vertical-align: bottom;
@@ -58,18 +67,16 @@
 
 .App-header {
     background-color: #1ba3f7;
-    min-height: 15vh;
-    max-height: 20vh;
+    min-height: 10vh;
+    max-height: 15vh;
     align-items: initial;
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
     padding-left: 5px;
     padding-top: 5px;
-    /*
-    display: flex;
+
     justify-content: flex-start;
-    */
 }
 
 
